# open-pitch-quant

./: .gitignore  LISTENING-LOG.md  PATHS-NOT-TAKEN.md  README.md  flake.nix
docs/: DSP.md  GUI.md
opq/: __init__.py  engine.py  io.py  m0.py
tools/bake-assets/: Cargo.toml
tools/bake-assets/src/: main.rs
wrac/: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README_JA.md
wrac/.github/scripts/: retry.sh
wrac/.github/workflows/: ci.yml
wrac/clap_wrapper_builder/: .gitignore  CMakeLists.txt  README.md  StandaloneInfo.plist.in
wrac/clap_wrapper_builder/clap-wrapper/: .clang-format  CMakeLists.txt  README.md
wrac/clap_wrapper_builder/clap-wrapper/.github/workflows/: code-checks.yml  pullreq.yml
wrac/clap_wrapper_builder/clap-wrapper/cmake/: base_sdks.cmake  make_clapfirst.cmake  shared_prologue.cmake  top_level_default.cmake  wrap_aax.cmake  wrap_auv2.cmake  wrap_standalone.cmake  wrap_vst3.cmake  wrap_wclap.cmake  wrapper_functions.cmake
wrac/clap_wrapper_builder/clap-wrapper/include/clapwrapper/: aax.h  auv2.h  vst3.h  wrac.h
wrac/clap_wrapper_builder/clap-wrapper/src/: clap_proxy.cpp  clap_proxy.h  wrapasauv2.cpp  wrapasstandalone.cpp  wrapasstandalone_windows.cpp  wrapasvst3.cpp  wrapasvst3.h  wrapasvst3_entry.cpp  wrapasvst3_export_entry.cpp
wrac/clap_wrapper_builder/clap-wrapper/src/detail/aax/: audioconfig.cpp  audioconfig.h  categories.cpp  categories.h  entry.cpp  factory.cpp  factory.h  parameter.cpp  parameter.h  plugview.cpp  plugview.h  process.cpp  process.h  util.cpp  util.h  wrapper.cpp  wrapper.h
wrac/clap_wrapper_builder/clap-wrapper/src/detail/auv2/: auv2_base_classes.h  auv2_shared.h  auv2_shared.mm  parameter.cpp  parameter.h  process.cpp  process.h  wrappedview.asinclude.mm
wrac/clap_wrapper_builder/clap-wrapper/src/detail/auv2/build-helper/: build-helper.cpp
wrac/clap_wrapper_builder/clap-wrapper/src/detail/clap/: automation.h  fsutil.cpp  fsutil.h
wrac/clap_wrapper_builder/clap-wrapper/src/detail/os/: linux.cpp  log.h  osutil.h  osutil_windows.h  windows.cpp
wrac/clap_wrapper_builder/clap-wrapper/src/detail/shared/: fixedqueue.h  sha1.cpp  sha1.h  util.h
wrac/clap_wrapper_builder/clap-wrapper/src/detail/standalone/: standalone_host.cpp  standalone_host.h  standalone_host_audio.cpp
wrac/clap_wrapper_builder/clap-wrapper/src/detail/standalone/linux/: x11_gui.cpp  x11_gui.h
wrac/clap_wrapper_builder/clap-wrapper/src/detail/standalone/macos/: AppDelegate.h  AppDelegate.mm  Info.plist.in
wrac/clap_wrapper_builder/clap-wrapper/src/detail/standalone/windows/: windows_standalone.cpp  windows_standalone.h
wrac/clap_wrapper_builder/clap-wrapper/src/detail/vst3/: categories.cpp  parameter.cpp  parameter.h  plugview.cpp  plugview.h  process.cpp  process.h  state.h
wrac/clap_wrapper_builder/clap-wrapper/tests/: CMakeLists.txt
wrac/clap_wrapper_builder/clap-wrapper/tests/clap-first-example/: CMakeLists.txt  distortion_clap.cpp
wrac/clap_wrapper_builder/clap-wrapper/tests/clap-macos-embedded/: CMakeLists.txt  README.md  distortion_clap.cpp
wrac/crates/wrac_build/: Cargo.toml
wrac/crates/wrac_build/src/: lib.rs
wrac/crates/wrac_clap_adapter/: Cargo.toml  README.md
wrac/crates/wrac_clap_adapter/src/: abi.rs  api.rs  descriptor.rs  entry.rs  events.rs  factory.rs  host_gui.rs  host_state.rs  lib.rs  params.rs  process_buffer.rs
wrac/crates/wrac_clap_adapter/src/abi/: audio_buffers.rs  audio_ports.rs  configurable_audio_ports.rs  ffi.rs  gui_extension.rs  latency_extension.rs  note_ports.rs  params_extension.rs  render_extension.rs  state_extension.rs  tail_extension.rs  vst3_extension.rs
wrac/crates/wrac_clap_adapter/src/api/: core.rs  error.rs  extensions.rs  host.rs  process.rs  types.rs
wrac/crates/wrac_clap_adapter/src/api/extensions/: audio_ports.rs  configurable_audio_ports.rs  gui.rs  latency.rs  note_ports.rs  params.rs  render.rs  state.rs  tail.rs
wrac/crates/wrac_host_context/: Cargo.toml
wrac/crates/wrac_host_context/src/: lib.rs
wrac/crates/wrac_log/: Cargo.toml
wrac/crates/wrac_log/src/: file_logger.rs  lib.rs  rt.rs
wrac/crates/wrac_wxp_gui/: Cargo.toml  README.md
wrac/crates/wrac_wxp_gui/src/: commands.rs  controller.rs  dpi.rs  lib.rs  pointer.rs  resize_drag.rs  runtime.rs  session.rs  window.rs
wrac/crates/wrac_wxp_gui/src/commands/: cursor.rs  resize.rs
wrac/crates/wrac_xtask/: Cargo.toml
wrac/crates/wrac_xtask/src/: cli.rs  commands.rs  context.rs  lib.rs  metadata.rs  plan.rs  profile.rs  targets.rs  util.rs  validation.rs
wrac/crates/wrac_xtask/src/validation/: checks.rs  clap_schema.rs  report.rs
wrac/docs/: aax-ja.md  aax.md  code-review-checklist-ja.md  code-review-checklist.md  production-readiness-checks-ja.md  production-readiness-checks.md  setup-ja.md  setup.md
wrac/plugins/opq/src-gui/: index.html  vite.config.ts
wrac/plugins/opq/src-gui/src/: bridge.ts  controls.ts  demoTrace.ts  figures.ts  flame.ts  grove.ts  main.ts  style.css  tooltip.ts  types.ts
wrac/plugins/opq/src-gui/src/wracRuntime/: nativeCursorBridge.ts
wrac/plugins/opq/src-plugin/: Cargo.toml  build.rs
wrac/plugins/opq/src-plugin/assets/: blake_ear.rgba  chladni.rgba  gray907.rgba  haas10.font  haas14.font  haas30.font  phonautograph.rgba  redon_ghost.rgba  trefoil.rgba
wrac/plugins/opq/src-plugin/src/: assets.rs  audio.rs  board.rs  canvas.rs  commands.rs  drum.rs  font.rs  gui.rs  gui_win32.rs  lib.rs  plugin.rs  state.rs
wrac/plugins/opq/src-plugin/src/gui/: notifier.rs  runtime.rs
wrac/plugins/opq/src-plugin/src/plugin/: audio_ports.rs  params.rs  state.rs
wrac/plugins/wrac-gain/src-gui/src/: nativeLog.ts  style.css
wrac/plugins/wrac-gain/src-gui/src/wracRuntime/: index.ts  resizeBridge.ts
wrac/plugins/wrac-gain/src-plugin/: Cargo.toml
wrac/plugins/wrac-gain/src-plugin/src/: audio.rs  commands.rs  gui.rs  lib.rs  plugin.rs  state.rs
wrac/plugins/wrac-gain/src-plugin/src/gui/: notifier.rs  runtime.rs
wrac/plugins/wrac-gain/src-plugin/src/plugin/: audio_ports.rs  params.rs  state.rs
wrac/xtask/: Cargo.toml
wrac/xtask/src/: main.rs
(+34 files in other folders)
