[package]
name = "wrac_build"
version = "0.1.0"
edition = "2024"
description = "Build script helpers for WRAC plugins"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false

[dependencies]
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[lints.rust]
unreachable_pub = "deny"
