[package]
name = "wrac_xtask"
version = "0.1.0"
edition = "2024"
description = "Shared build tasks for WRAC plugin repositories"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false

[dependencies]
cargo_metadata = "0.19"
clap-sys = { workspace = true }
clap = { version = "4.5.38", features = ["derive"] }
dotenvy = "0.15"
libloading = "0.8"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
