[package]
name = "opq_plugin_wrac"
version = "0.1.0"
edition = "2024"
description = "OpenPitchQuant - real-time polyphonic pitch mapping"
license = "MIT"
repository = "https://github.com/novonotes/wrac-plugin-template"
publish = false
build = "build.rs"

# WRAC metadata is the single source of truth for host-visible descriptors,
# GUI About metadata, bundle names, wrapper arguments, AUv2 registration,
# WebView data dirs, and logs. Set these explicitly before shipping; changing
# public IDs or FourCC values after release can break host project recall.
[package.metadata.wrac]
# User-visible vendor name shown by hosts and the template GUI.
company_name = "open-pitch-quant"
# AUv2 manufacturer code. Use the same 4-byte ASCII code across your AUv2 plugin catalog.
auv2_manufacturer_code = "Opqt"
# AAX manufacturer ID registered with Avid. Keep it stable across the AAX product catalog.
aax_manufacturer_id = "Opqt"
# Shared CLAP/VST3/AAX bundle name. Product-specific AU bundles use plugin_name below.
bundle_name = "OpenPitchQuant"
# Reverse-DNS bundle identifier used by macOS bundles. Keep it stable.
bundle_identifier = "org.open-pitch-quant.opq"
# Commercial metadata shown by hosts and About views where supported.
homepage_url = "https://github.com/open-pitch-quant"
manual_url = "https://github.com/open-pitch-quant"
support_url = "https://github.com/open-pitch-quant"
description = "Real-time polyphonic pitch mapping (open PITCHMAP exploration)"
copyright = "Copyright 2026 open-pitch-quant contributors"
# Product policy for plugin formats. xtask defaults use this list, while
# explicit --target requests fail if the requested format is not declared here.
supported_formats = ["clap", "vst3", "au"]


[[package.metadata.wrac.plugins]]
# Reverse-DNS identifier. Use your own domain or another namespace you control.
plugin_id = "org.open-pitch-quant.opq"
# User-visible plugin name shown by hosts and the template GUI.
plugin_name = "OpenPitchQuant"
# CLAP feature identifiers used in the generated CLAP descriptor.
clap_features = ["audio-effect", "pitch-shifter", "stereo"]
# VST3 PClassInfo2 subCategories string. Keep this explicit because CLAP
# features do not always map cleanly to commercial host browser categories.
vst3_subcategories = "Fx|Pitch Shift"
# VST3 component ID. Generate a UUID once before release and keep it stable;
# changing it makes hosts treat the plugin as a different VST3.
vst3_component_id = "816cce6a-bf23-53c4-8d06-edec34c7e518"
# User-visible standalone app name.
standalone_name = "OpenPitchQuant Standalone"
# AUv2 component type. "aumf" (music effect) — an effect that RECEIVES MIDI.
# Plain "aufx" has no MIDI input, so hosts hide it from MIDI routing targets.
auv2_type = "aumf"
# AUv2 subtype. Pick a unique 4-byte ASCII code for each plugin from the same vendor.
auv2_subtype = "Opq1"
# AAX category names are converted to AAX_EPlugInCategory bits.
aax_categories = ["effect"]
# AAX product ID registered with Avid. Usually stable per product.
aax_product_id = "Opq1"

[[package.metadata.wrac.plugins.aax_stem_configs]]
# Inert while "aax" is not in supported_formats; schema requires the table.
name = "Mono"
input = "mono"
output = "mono"
plugin_id = "OpqM"

[[package.metadata.wrac.plugins.aax_stem_configs]]
name = "Stereo"
input = "stereo"
output = "stereo"
plugin_id = "OpqS"



[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc.git", rev = "d31f2d5f550ce339d1c2f0c1ab7da951224b20df", features = ["backtrace"] }
atomic_float = "1.1.0"
log = "0.4"
novonotes_run_loop = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
run_loop_timer = { workspace = true }
wrac_clap_adapter = { workspace = true }
wrac_log = { workspace = true }
wrac_wxp_gui = { workspace = true }
opq-engine = { path = "../../../../rt/engine" }
wxp = { workspace = true }

[lints.rust]
unreachable_pub = "deny"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wrac_build = { path = "../../../crates/wrac_build" }
